{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 26,
  "lineage": "ba5465aa-8283-cf8f-351b-1cf9e23cc4e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:security-group/sg-0febc417b28bbabe7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0febc417b28bbabe7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240504083252983900000002",
            "name_prefix": "terraform-",
            "owner_id": "637423326662",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423326662:loadbalancer/app/alb-riri/e88cc0fedb844379",
            "arn_suffix": "app/alb-riri/e88cc0fedb844379",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-riri-410827202.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423326662:loadbalancer/app/alb-riri/e88cc0fedb844379",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-riri",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0febc417b28bbabe7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-071c1dc07b89ddfd1"
              },
              {
                "subnet_id": "subnet-072d3c64540aa410e"
              },
              {
                "subnet_id": "subnet-08fc0bb34cc8bf212"
              }
            ],
            "subnets": [
              "subnet-071c1dc07b89ddfd1",
              "subnet-072d3c64540aa410e",
              "subnet-08fc0bb34cc8bf212"
            ],
            "tags": {
              "Name": "alb-riri-alb"
            },
            "tags_all": {
              "Name": "alb-riri-alb"
            },
            "vpc_id": "vpc-077af0be43d2b9675",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423326662:listener/app/alb-riri/e88cc0fedb844379/837e604cf4d3614e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423326662:targetgroup/tf-20240504083252962300000001/5800e20995f89089",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423326662:listener/app/alb-riri/e88cc0fedb844379/837e604cf4d3614e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423326662:loadbalancer/app/alb-riri/e88cc0fedb844379",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423326662:targetgroup/tf-20240504083252962300000001/5800e20995f89089",
            "arn_suffix": "targetgroup/tf-20240504083252962300000001/5800e20995f89089",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423326662:targetgroup/tf-20240504083252962300000001/5800e20995f89089",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240504083252962300000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07aba55587fa32b3f",
            "arn": "arn:aws:ec2:us-east-1:637423326662:elastic-ip/eipalloc-07aba55587fa32b3f",
            "domain": "vpc",
            "id": "eipalloc-07aba55587fa32b3f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-205-253-107.compute-1.amazonaws.com",
            "public_ip": "34.205.253.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Riri-eip"
            },
            "tags_all": {
              "Name": "Riri-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:internet-gateway/igw-0a0b53d778105c5c8",
            "id": "igw-0a0b53d778105c5c8",
            "owner_id": "637423326662",
            "tags": {
              "Name": "Riri-igw"
            },
            "tags_all": {
              "Name": "Riri-igw"
            },
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07aba55587fa32b3f",
            "association_id": "eipassoc-0db1f370d74040056",
            "connectivity_type": "public",
            "id": "nat-06bf33ccbf8779196",
            "network_interface_id": "eni-00ce01543e3ae95f8",
            "private_ip": "10.4.0.59",
            "public_ip": "34.205.253.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-071c1dc07b89ddfd1",
            "tags": {
              "Name": "Riri-nat"
            },
            "tags_all": {
              "Name": "Riri-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:route-table/rtb-08cafe57a1e32ef6f",
            "id": "rtb-08cafe57a1e32ef6f",
            "owner_id": "637423326662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06bf33ccbf8779196",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Riri-private-rt"
            },
            "tags_all": {
              "Name": "Riri-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:route-table/rtb-005bd522d23c987ff",
            "id": "rtb-005bd522d23c987ff",
            "owner_id": "637423326662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0b53d778105c5c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-ass",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f2c46cc63cb926d",
            "route_table_id": "rtb-08cafe57a1e32ef6f",
            "subnet_id": "subnet-012a60e2d239aaef7"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7a164b96cf0a487",
            "route_table_id": "rtb-08cafe57a1e32ef6f",
            "subnet_id": "subnet-05a916ca2d0499ce6"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be0c0fb6fbeadcc2",
            "route_table_id": "rtb-08cafe57a1e32ef6f",
            "subnet_id": "subnet-03a8f7725b99342f4"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-ass",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08aa0ae06e6a68809",
            "route_table_id": "rtb-005bd522d23c987ff",
            "subnet_id": "subnet-071c1dc07b89ddfd1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet-5",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebc1c02a19b0adeb",
            "route_table_id": "rtb-005bd522d23c987ff",
            "subnet_id": "subnet-072d3c64540aa410e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet-6",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1286c21c21f3cdd",
            "route_table_id": "rtb-005bd522d23c987ff",
            "subnet_id": "subnet-08fc0bb34cc8bf212"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:subnet/subnet-012a60e2d239aaef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.4.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012a60e2d239aaef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423326662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1a"
            },
            "tags_all": {
              "Name": "private-subnet-1a"
            },
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:subnet/subnet-05a916ca2d0499ce6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.4.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a916ca2d0499ce6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423326662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2b"
            },
            "tags_all": {
              "Name": "private-subnet-2b"
            },
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:subnet/subnet-03a8f7725b99342f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.4.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a8f7725b99342f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423326662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3c"
            },
            "tags_all": {
              "Name": "private-subnet-3c"
            },
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:subnet/subnet-071c1dc07b89ddfd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071c1dc07b89ddfd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423326662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-4d"
            },
            "tags_all": {
              "Name": "public-subnet-4d"
            },
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet-5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:subnet/subnet-072d3c64540aa410e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072d3c64540aa410e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423326662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-5e"
            },
            "tags_all": {
              "Name": "public-subnet-5e"
            },
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "subnet-6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:subnet/subnet-08fc0bb34cc8bf212",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.4.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fc0bb34cc8bf212",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423326662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-6f"
            },
            "tags_all": {
              "Name": "public-subnet-6f"
            },
            "vpc_id": "vpc-077af0be43d2b9675"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423326662:vpc/vpc-077af0be43d2b9675",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-07c276461fe2eee1b",
            "default_route_table_id": "rtb-039fd363b869671d4",
            "default_security_group_id": "sg-07a94e2adf4a32aeb",
            "dhcp_options_id": "dopt-04b75a508b9e3299d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077af0be43d2b9675",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039fd363b869671d4",
            "owner_id": "637423326662",
            "tags": {
              "Name": "Riri-vpc"
            },
            "tags_all": {
              "Name": "Riri-vpc"
            }
          }
        }
      ]
    }
  ]
}